
- bpo-29755: Fixed the lgettext() family of functions in the gettext module.
  They now always return bytes.

- [Security] bpo-30500: Fix urllib.parse.splithost() to correctly parse
  fragments. For example, ``splithost('//127.0.0.1#@evil.com/')`` now
  correctly returns the ``127.0.0.1`` host, instead of treating ``@evil.com``
  as the host in an authentification (``login@host``).

- bpo-30038: Fix race condition between signal delivery and wakeup file
  descriptor.  Patch by Nathaniel Smith.

- bpo-23894: lib2to3 now recognizes ``rb'...'`` and ``f'...'`` strings.

- [Security] bpo-29591: Update expat copy from 2.1.1 to 2.2.0 to get fixes
  of CVE-2016-0718 and CVE-2016-4472. See
  https://sourceforge.net/p/expat/bugs/537/ for more information.

- bpo-24744: pkgutil.walk_packages function now raises ValueError if *path*
  is a string. Patch by Sanyam Khurana.

- bpo-24484: Avoid race condition in multiprocessing cleanup.

- bpo-30589: Fix multiprocessing.Process.exitcode to return the opposite
  of the signal number when the process is killed by a signal (instead
  of 255) when using the "forkserver" method.

- bpo-28994: The traceback no longer displayed for SystemExit raised in
  a callback registered by atexit.

- bpo-30508: Don't log exceptions if Task/Future "cancel()" method was
  called.

- bpo-11822: The dis.dis() function now is able to disassemble nested
  code objects.

- bpo-30624: selectors does not take KeyboardInterrupt and SystemExit into
  account, leaving a fd in a bad state in case of error. Patch by Giampaolo
  Rodola'.

- bpo-30595: multiprocessing.Queue.get() with a timeout now polls its reader in
  non-blocking mode if it succeeded to aquire the lock but the acquire took
  longer than the timeout.

- bpo-28556: Updates to typing module: Add generic AsyncContextManager, add
  support for ContextManager on all versions. Original PRs by Jelle Zijlstra
  and Ivan Levkivskyi
